deployment/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name:  namehead
  namespace: database
spec:
  selector:
    app: postgres
  clusterIP: None
  ports:
  - name: tcp
    port:  80
    targetPort:  5432
