deployment/ingress_dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-onlinestore
  namespace: dev-swt
spec:
  rules:
  - host: 
      ab3aa59a80699402685a071feea3a0dd-1526015442.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /onlinebookstore
        pathType: Prefix
        backend:
          service:
            name: onlinebookstore
            port:
              number: 80
